# Moo-s-Profile

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  vercel.json
.agents/skills/dioxus/: SKILL.md
.github/workflows/: ci.yml
.plans/: 02-implement-pagination-sdk.md  04-pagination-implementation.md  05-refactor-content-to-feature.md  06-add-modal-component.md  07-content-card-modal-preview.md  08-content-page-redesign.md  09-content-own-layout.md  10-add-chat-route-latcal.md  11-chat-ui-realign.md
assets/: main.css
src/: main.rs
src/components/: footer.rs  header.rs  interest_card.rs  mod.rs  modal.rs  nav.rs  skill_tags.rs  theme_toggle.rs  timeline.rs
src/features/content/: content_card.rs  content_detail.rs  content_grouped.rs  inline_viewer.rs  mod.rs  modal_content.rs  tag_filter_bar.rs
src/features/content/hooks/: mod.rs  use_tags.rs
src/hooks/: mod.rs
src/routes/: chat.rs  content.rs  interests.rs  mod.rs  work_history.rs
